# sysopt

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  pylintrc  pyproject.toml  requirements.txt  roadmap  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: deploy.yaml  develop.yaml  develop.yml
blocks/: aero.py  gravity.py  kinetics.py  thrust.py  vehicle_composites.py
codesign/: __init__.py  block.py  common.py  direct.py  functions.py  helpers.py  interfaces.py  ops.py  problem.py
codesign/backends/: pure_python.py
codesign/blocks/: common.py  helpers.py
codesign/core/: __init__.py  differentials.py  name_registry.py  scalars.py  signature.py  tree_base.py  tree_operations.py  vectors.py
docs/: Makefile
docs/source/: conf.py  index.rst
examples/: cart.py  cart_oop.py  driven_duffing_system.py  fitting_a_pwm_driven_oscillator.py  hsv_dynamics.py
examples/depreciated/: block.txt  cart.py  hsv.py  test_cartpole.py  test_lqr.py
models/: 2DoF  GHAME3  GHAME3_polar  KO_2DoF.py  test_3DoF.py  test_vehicle.py
notebooks/: demos.ipynb  driven_duffing.ipynb  sysopt intro.ipynb
notebooks/depreciated/: hsv.ipynb  problem_statement.ipynb  working.ipynb
sysopt/: __init__.py  backend.py  block.py  env.py  exceptions.py  functions.py  helpers.py  optimisation.py  perf_tools.py  symbolic.py  types.py  var_types.py  version.py
sysopt/HSV/: aerodynamics.py  atmosphere.py  gravity.py  inertia.py  physical_environment.py  propulsion.py  vehicle_2dof.py  vehicle_3dof.py
test/: test_api.py  test_block.py
tests/: test_casadi_backend.py
(+118 files in other folders)
