[metadata]
name = sysopt
version = 0.0.2
author = Peter Cudmore
author_email = peter.cudmore@unimelb.edu.au
url = https://github.com/csp-at-unimelb/sysopt
project_urls=
    Bug Tracker = https://github.com/csp-at-unimelb/sysopt/issues
description= Component-based systems modelling library.
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = sysopt
packages = find:
python_requires = >=3.7
install_requires =
    numpy >= 1.20
    casadi

[options.packages.find]
where = sysopt

[flake8]
per-file-ignores:
    __init__.py: F401,F403

exclude=
    tests/9_examples,
    __pycache__,
    .git,
    .github,
    dist,
    notebooks
